// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common / Nav / Nav Bar Global Nav 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzMlD cAkPKJ"
    >
      <div
        className="sc-LzMlE hmDUDX"
      >
        <div
          className="sc-LzMlG eFJFvs"
        >
          <div
            className="sc-LzMlF exHyhM"
          >
            <a
              href="https://civil.co"
            >
              <svg
                height="21"
                viewBox="0 0 72 21"
                width="72"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#FFFFFF"
                >
                  <path
                    d="M.5 10c0-5.76 4.357-10 9.856-10 3.58 0 6.069 1.414 7.729 3.77L15.75 5.445c-1.297-1.728-2.905-2.67-5.499-2.67-3.838 0-6.64 3.089-6.64 7.225 0 4.24 2.853 7.225 6.744 7.225 2.49 0 4.357-.942 5.81-2.827L18.5 16.02C16.529 18.691 13.987 20 10.252 20 4.805 20 .5 15.76.5 10M22.5 20h3V1h-3zM29 1h3.382l5.782 13.228L43.782 1H47l-8.782 20h-.163zM50.5 20h3V1h-3zM59.5 1h3.175v16.344H71.5V20h-12z"
                  />
                </g>
              </svg>
            </a>
          </div>
          <div
            className="sc-LzMCd dUxLkb"
          >
            <div
              className="sc-LzMCi bLpfCJ"
            >
              <span
                className="sc-LzMCj jxjMAj"
              >
                <a
                  href="/registry"
                  onClick={[Function]}
                >
                  Registry
                </a>
                <div
                  className="sc-LzMCH fHOBnG"
                />
              </span>
              <div
                className="sc-LzMCI fuoFwB"
              >
                <a
                  href="/registry"
                  onClick={[Function]}
                >
                  Registry Home
                </a>
                <a
                  href="/parameterizer"
                  onClick={[Function]}
                >
                  Registry Parameters
                </a>
                <a
                  href="/contract-addresses"
                  onClick={[Function]}
                >
                  Contract Addresses
                </a>
              </div>
            </div>
            <a
              href="https://civil.co/constitution/"
            >
              Constitution
            </a>
            <a
              href="https://civilfound.org/"
            >
              Foundation
            </a>
            <a
              href="https://help.civil.co/"
            >
              Help
            </a>
          </div>
          <div
            className="sc-LzMCe eTLCJx"
          >
            <div
              onClick={[Function]}
            >
              <svg
                height="42"
                viewBox="0 0 42 42"
                width="42"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 26h18v-2H12v2zm0-8h18v-2H12v2z"
                  fill="#FFFFFF"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-LzMCf cGIIF"
          />
        </div>
        <div
          className="sc-LzMlH iZpHzR"
        >
          <button
            className="sc-fzXfOu sc-fzXfOy sc-LzMBt dQmeHi"
            onClick={[Function]}
            theme={
              Object {
                "darkButtonBackground": "#000000",
                "darkButtonColor": "#FFFFFF",
                "darkButtonHoverBackground": "#5A5653",
                "darkButtonHoverColor": "#FFFFFF",
                "darkButtonTextTransform": "none",
              }
            }
            type="button"
          >
            Log In
          </button>
          <button
            className="sc-fzXfOu sc-fzXfOy sc-LzMBu iemUcZ"
            onClick={[Function]}
            theme={
              Object {
                "darkButtonBackground": "#000000",
                "darkButtonColor": "#FFFFFF",
                "darkButtonHoverBackground": "#5A5653",
                "darkButtonHoverColor": "#FFFFFF",
                "darkButtonTextTransform": "none",
              }
            }
            type="button"
          >
            Sign Up
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Nav / Nav Bar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Global Nav
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    story
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    links
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    routerProps
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Nav / Nav Bar Nav Error Bar 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzMCJ hixvpK"
    >
      Please Switch To Rinkeby Testnet
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Nav / Nav Bar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Nav Error Bar
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  StoryRouter
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      story
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          anonymous
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      links
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      routerProps
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          null
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryRouter
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    story
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    links
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    routerProps
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
